--- a/websocket/front/index.html
+++ b/websocket/front/index.html
@@ -12,6 +12,7 @@
     <button onclick="send()">Refresh</button>
 
 </body>
+<script src="../backend/api.js"></script>
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
 <script>
     let i = 0;
