:lipstick: front structure

--- a/websocket/front/index.html
+++ b/websocket/front/index.html
@@ -4,20 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="header">
-        <textarea name="" id="" cols="15" rows="1" id="roomSelector"></textarea>
+        <div>
+            <h1>POP SOCKET !</h1>
+            <p>Your room:</p>
+            <textarea name="" id="roomSelector"></textarea>
+        </div>
     </div>
 
-    <div id="quizz">
-        <div id="question"></div>
-        <div id="answer"></div>
-    </div>
-
-    <div id="tab">
-
-    </div>
+    <section id="theRoom">
+        <div id="quizz">
+            <div id="question"></div>
+            <div id="answer"></div>
+        </div>
+    
+        <div id="tab">
+            <div id="profil"></div>
+            <ul></ul>
+        </div>
+    </section>
 
     <!-- <p class="data"></p>
     <button onclick="send()">Refresh</button> -->
