--- a/websocket/front/index.html
+++ b/websocket/front/index.html
@@ -10,20 +10,28 @@
     <div id="header">
         <div>
             <h1>POP SOCKET !</h1>
+            <!-- <button id="start" >start</button>-->
             <p>Your room:</p>
             <textarea name="" id="roomSelector"></textarea>
+            <p id="time"></p>
         </div>
     </div>
 
     <section id="theRoom">
         <div id="quizz">
+            <p id="start" >START GAME?</p>
             <div id="question"></div>
             <div id="answer"></div>
         </div>
     
         <div id="tab">
-            <div id="profil"></div>
-            <ul></ul>
+            <div id="profil">
+                <p>your score:</p>
+            </div>
+            <div id="players">
+                <p>all players:</p>
+                <ul></ul>
+            </div>
         </div>
     </section>
 
